# books-agent

./: .gitignore  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  docker-compose.yml  lab.py  main.py  pyproject.toml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TUTORIAL_auth.md  alembic.ini  main.py  pyproject.toml
backend/app/agent/: config.py  graph.py  nodes.py  recommender.py  routing.py  state.py
backend/app/application/: uow.py
backend/app/application/common/: result.py
backend/app/application/dtos/: auth_dtos.py  book_dtos.py  user_dtos.py
backend/app/application/repositories/: book_repository.py  book_vector_repository.py  user_repository.py
backend/app/application/service_ports/: book_recommender.py  embeddings_service.py  llm_service.py  password_hasher.py  token_service.py
backend/app/application/use_cases/: auth_use_cases.py  book_use_cases.py  user_use_cases.py
backend/app/domain/: exceptions.py  value_objects.py
backend/app/domain/entities/: book.py  entity.py  user.py
backend/app/infra/: agent_settings.py  config.py  repository_factory.py  uow.py
backend/app/infra/llm/: prompts.py  (+2 more)
backend/migrations/: env.py
backend/migrations/versions/: 5fb65073b818_create_users_table.py  b2c3d4e5f6a7_create_books_table.py
backend/scripts/: prepare_data.py
backend/tests/: test_harness.py  test_live_eval.py  test_nodes.py  test_prompts.py  test_sql_guard.py
backend/tests/harness/: __init__.py  _ragas_compat.py  engine.py  fakes.py  golden_dataset.py  live.py  metrics.py  run.py  scenarios.py  scorecard.py  types.py
(+56 files in other folders)
