[project]
name = "samizdat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.128.0",
    "langchain-core>=1.4.6",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.32",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
    "weaviate-client>=4.21.3",
]

[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ragas>=0.4.3",
    "ruff>=0.14.8",
]


[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: hits real models/DBs; opt-in via RUN_LIVE_EVAL=1 (deselected by default)",
]
